Hibernate pom version for persist extension addon